feat: add SAST security scanning

--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -19,4 +19,5 @@ jobs:
   # Les jobs seront ajoutés progressivement dans les exercices suivants
   # ═══════════════════════════════════════════════
   build-and-test:
-    uses: ./.github/workflows/build-unit-tests.yml
+    needs: ./.github/workflows/build-unit-tests.yml
+    uses: ./.github/workflows/code-quality-sast.yml
