--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -15,13 +15,9 @@ permissions:
   actions: read
 
 jobs:
-  # ═══════════════════════════════════════════════
-  # Les jobs seront ajoutés progressivement dans les exercices suivants
-  # ═══════════════════════════════════════════════
-  build-and-test:
-    uses: ./.github/workflows/build-unit-tests.yml
+    build-and-test:
+      uses: ./.github/workflows/build-unit-tests.yml
 
-
-  code-quality-sast:
-  needs: build-and-test  # ⚠️ Attend que le build soit terminé
-  uses: ./.github/workflows/code-quality-sast.yml
+    code-quality-sast:
+      needs: build-and-test
+      uses: ./.github/workflows/code-quality-sast.yml
