--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -30,7 +30,7 @@ jobs:
     sca-dependency-scan:
       needs: build-and-test  # Également en parallèle
       uses: ./.github/workflows/sca-dependency-scan.yml
-      secrets: inherit  # ⚠️ IMPORTANT pour passer NVD_API_KEY
+#      secrets: inherit  # ⚠️ IMPORTANT pour passer NVD_API_KEY
 
     secure-iac-dockerfile-scan:
       needs: build-and-test  # Toujours en parallèle
