--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -27,9 +27,9 @@ jobs:
       uses: ./.github/workflows/secret-scanning.yml
 
 
-    sca-dependency-scan:
-      needs: build-and-test  # Également en parallèle
-      uses: ./.github/workflows/sca-dependency-scan.yml
+#    sca-dependency-scan:
+#      needs: build-and-test  # Également en parallèle
+#      uses: ./.github/workflows/sca-dependency-scan.yml
 #      secrets: inherit  # ⚠️ IMPORTANT pour passer NVD_API_KEY
 
     secure-iac-dockerfile-scan:
