--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -15,23 +15,6 @@ permissions:
   actions: read
 
 jobs:
-    build-and-test:
-      uses: ./.github/workflows/build-unit-tests.yml
-
-    code-quality-sast:
-      needs: build-and-test
-      uses: ./.github/workflows/code-quality-sast.yml
-
-    secret-scanning:
-      needs: build-and-test
-      uses: ./.github/workflows/secret-scanning.yml
-
-
-#    sca-dependency-scan:
-#      needs: build-and-test  # Également en parallèle
-#      uses: ./.github/workflows/sca-dependency-scan.yml
-#      secrets: inherit  # ⚠️ IMPORTANT pour passer NVD_API_KEY
-
-    secure-iac-dockerfile-scan:
-      needs: build-and-test  # Toujours en parallèle
-      uses: ./.github/workflows/secure-iac-dockerfile-scan.yml
+    build-and-scan-docker:
+      uses: ./.github/workflows/build-docker-image.yml
+      secrets: inherit
